[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "haashi_pkg"
version = "0.2.0"
description = "A modular Python toolkit for analytics workflows, including data processing, visualization, and reusable utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Haashiraaa" }
]
dependencies = [
    "pandas", 
    "seaborn", 
    "matplotlib", 
    "numpy",
    "pyarrow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
